added pagination to incidents pages and made some changes on style

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -1,3 +1,7 @@
 {
-	"test": "Incident Reporting System"
+	"test": "Incident Reporting System",
+	"incident": {
+		"id": "ID",
+		"createdBy": "Created By"
+	}
 }
