--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -37,5 +37,9 @@
 		"review": "Review as admin",
 		"edit": "Edit",
 		"logout": "Logout"
+	},
+	"input": {
+		"input": "Input",
+		"password": "Password"
 	}
 }
